[tool.poetry]
name = "embedded-sass-python"
version = "0.1.0"
description = ""
authors = ["charitybell <hello@charitybell.xyz>"]
readme = "README.md"
packages = [{include = "embedded_sass_python"}]

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^4.23.2"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
mypy-protobuf = "^3.4.0"
isort = "^5.12.0"
pyprs = {git = "https://github.com/charitybell/pyprs"}
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.2.7"}

[tool.flake8]
max-line-length = 99
exclude = [
    "embedded_sass_python/embedded_sass_pb2.py"
]

[tool.mypy]
exclude = 'embedded_sass_python/embedded_sass_pb2\.py$'

[tool.pyprs.scripts]
flake8 = "flake8 embedded_sass_python tests"
mypy   = "mypy --strict -p embedded_sass_python"
protoc = "protoc --python_out=embedded_sass_python/ --mypy_out=embedded_sass_python/ embedded_sass.proto"
test   = "pytest"
lint   = "pyprs flake8 ; pyprs mypy"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
addopts = '--cov'
testpaths = ['tests']

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ['embedded_sass_python/embedded_sass_pb2.py']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
